Fixed overlay z-index.

--- a/app/stylesheets/layout.less
+++ b/app/stylesheets/layout.less
@@ -297,7 +297,7 @@ img{
     }   
 }
 
-@event-overlay-z-index: @site-menu-z-index + 1;
+@event-overlay-z-index: 250;
 .event_overlay{
     position: absolute;
     z-index: @event-overlay-z-index;
